{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Movement",
            "id": "013abc56-337a-4f51-ba84-07b1d974b835",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "05d3096b-c911-4215-b46b-27e0dc4a098e",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f95be096-0dec-4a5f-aeb9-1359d856c1db",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}